# Nova

./: .gitignore  README.md  nova.bat  nova.db  pyproject.toml  setup.bat  task.md  user_guide.md  user_guilde.md
android_agent/: build.gradle.kts
desktop_agent/: __init__.py  action_executor.py  intent_matcher.py  logger.py  main.py  models.py  permission_registry.py  policy.yaml
desktop_agent/actions/: app_control.py  file_ops.py  system_info.py
desktop_agent/client/: core_client.py
desktop_agent/platform/: __init__.py  base.py  linux_adapter.py  macos_adapter.py  windows_adapter.py
nova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nova_core/: __init__.py  auth.py  main.py  permission_registry.py  policy.yaml
nova_core/api/: routes_auth.py  routes_automation.py  routes_capabilities.py  routes_command.py  routes_context.py  routes_db.py  routes_event.py  routes_history.py  routes_migration.py  routes_policy.py
nova_core/automation/: __init__.py  conditions.py  engine.py  rules_store.py
nova_core/context/: __init__.py  context_store.py  task_resolver.py
nova_core/db/: schema.sql  store.py
nova_core/models/: __init__.py  action.py  command.py  device.py
nova_core/presence/: __init__.py  presence_tracker.py
nova_core/router/: hybrid_router.py  llm_client.py
nova_core/web/: TUNNEL.md  dashboard.css  dashboard.js  index.html
nova_core/ws/: connection_manager.py
tests/desktop_agent/: __init__.py  test_action_executor.py  test_intent_matcher.py  test_permission_registry.py  test_platform_adapters.py
tests/nova_core/: __init__.py  (+17 more)
(+15 files in other folders)
